# ai-4x-rs

./: Cargo.toml
src/: main.rs
src/art/: colors.rs  layers.rs  main.rs  mod.rs  roman_font.rs  square.rs  text.rs  types.rs
src/components/: button.rs  camera.rs  cell.rs  city.rs  map.rs  mod.rs  randomized.rs  render_data.rs  render_data_spritesheet.rs  render_data_text.rs  render_id.rs  scene.rs  tile.rs  transform.rs
src/core/: event_clump.rs  game.rs  handle_events.rs  mod.rs  starter.rs
src/events/: game_x_main_game_city.rs  game_x_main_game_map.rs  game_x_main_game_pause_menu.rs  game_x_main_menu.rs  main_x_control.rs  main_x_game.rs  main_x_render.rs  mod.rs
src/graphics/: mod.rs  ng_glutin.rs  pipeline.rs  pipeline_text.rs  shaders.rs  texture.rs  types.rs  window.rs
src/graphics/shaders/: spritesheet_150_f.glsl  spritesheet_150_v.glsl  text_150_f.glsl  text_150_v.glsl
src/systems/: cellular.rs  city.rs  control.rs  fps_counter.rs  main_game_city.rs  main_game_map.rs  main_game_pause_menu.rs  main_menu.rs  mod.rs  randomizer.rs  render.rs
src/utils/: button.rs  duo_channel.rs  fps_counter.rs  mod.rs  orthographic_helper.rs
